Add Name field to PlacementGroup for Scheduling.SlurmQueues.Networking
The Name field is needed to clarify the input for placement groups.
Id was used previously by mistake.  However, since it already included
in a release, it needs to stay in the config template.

Signed-off-by: Ryan Anderson <ndry@amazon.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
-  - repo: git://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
       - id: trailing-whitespace
@@ -37,7 +37,7 @@ repos:
         args: ['-rc', '-w 120', '--settings-path=cli/.isort.cfg']
 
   - repo: https://github.com/ambv/black
-    rev: 20.8b1
+    rev: 22.6.0
     hooks:
       - id: black
         args: ['-l 120']
