Add instance type for intel_hpc test
This in order to reduce ICE when using c5n.18xlarge

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
+++ b/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
@@ -26,7 +26,8 @@ Scheduling:
             - {{ instance }}
           {% else %}
           InstanceTypeList:
-            - InstanceType: {{ instance }}
+            - InstanceType: c5n.18xlarge
+            - InstanceType: c5n.metal
           {% endif %}
           MinCount: 2
       Networking:
