Fix scheduler plugin test
Flexible instance type isn't yet implemented for scheduler plugin, revert test to use single InstanceType

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
@@ -24,8 +24,12 @@ Scheduling:
           Script: s3://{{ bucket }}/scripts/preinstall.sh
       ComputeResources:
         - Name: broken-static
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large # instance type has bootstrap failure
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large # instance type has bootstrap failure
+          {% endif %}
           MinCount: 2
           MaxCount: 250
       Iam:
@@ -42,12 +46,20 @@ Scheduling:
           Script: s3://{{ bucket }}/scripts/preinstall.sh
       ComputeResources:
         - Name: broken-dynamic
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large # instance type has bootstrap failure
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large # instance type has bootstrap failure
+          {% endif %}
           MaxCount: 250
         - Name: working-static
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.xlarge # instance type works as expected
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.xlarge # instance type works as expected
+          {% endif %}
           MinCount: 1
           MaxCount: 250
       Iam:
@@ -64,8 +76,12 @@ Scheduling:
           Script: s3://{{ bucket }}/scripts/preinstall.sh
       ComputeResources:
         - Name: normal
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.xlarge # instance type works as expected
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.xlarge # instance type works as expected
+          {% endif %}
           MinCount: 1
           MaxCount: 250
       Iam:
