--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
@@ -20,8 +20,12 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: broken-static
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large # instance type has bootstrap failure
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large # instance type has bootstrap failure
+          {% endif %}
           MinCount: 3 # Set min_count larger than bootstrap failure threshold (which is 2) to test pcluster stop and start don't treat static nodes as bootstrap failure nodes and not set into protected node
       Iam:
         S3Access:
@@ -33,11 +37,19 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: broken-dynamic
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large # instance type has bootstrap failure
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large # instance type has bootstrap failure
+          {% endif %}
         - Name: working-static
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.xlarge # instance type has bootstrap failure
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.xlarge # instance type works as expected
+          {% endif %}
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
@@ -48,8 +60,12 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: normal
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.xlarge # instance type works as expected
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.xlarge # instance type works as expected
+          {% endif %}
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
