--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -501,6 +501,18 @@ schedulers:
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["ubuntu2004"]
         schedulers: ["slurm"]
+  test_slurm_accounting.py::test_slurm_accounting:
+    dimensions:
+      - regions: ["us-east-1", "ap-south-1"]
+        instances:  {{ common.INSTANCES_DEFAULT_X86 }}
+        oss: ["alinux2", "ubuntu2004"]
+        schedulers: ["slurm"]
+  test_slurm_accounting.py::test_slurm_accounting_disabled_to_enabled_update:
+    dimensions:
+      - regions: ["us-west-2"]
+        instances:  {{ common.INSTANCES_DEFAULT_X86 }}
+        oss: ["centos7", "ubuntu1804"]
+        schedulers: ["slurm"]
 spot:
   test_spot.py::test_spot_default:
     dimensions:
