[DFSM] Fix cluster configuration used in integration tests: using same instance type for head node and compute nodes.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/update/test_update/test_dynamic_file_systems_update/pcluster.config.update_drain.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_dynamic_file_systems_update/pcluster.config.update_drain.yaml
@@ -21,7 +21,7 @@ Scheduling:
       ComputeResources:
         - Name: queue1-i1
           InstanceTypeList:
-            - InstanceType: c5.xlarge
+            - InstanceType: {{ instance }}
           MinCount: 1
           MaxCount: 2
       Networking:
@@ -34,7 +34,7 @@ Scheduling:
       ComputeResources:
         - Name: queue2-i1
           InstanceTypeList:
-            - InstanceType: c5.xlarge
+            - InstanceType: {{ instance }}
           MinCount: 1
           MaxCount: 2
       Networking:
