--- a/tests/integration-tests/tests/update/test_update/test_dynamic_file_systems_update/pcluster.config.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_dynamic_file_systems_update/pcluster.config.yaml
@@ -13,7 +13,7 @@ Scheduling:
       ComputeResources:
         - Name: queue1-i1
           InstanceTypeList:
-            - InstanceType: c5.xlarge
+            - InstanceType: {{ instance }}
           MinCount: 1
           MaxCount: 2
       Networking:
@@ -23,7 +23,7 @@ Scheduling:
       ComputeResources:
         - Name: queue2-i1
           InstanceTypeList:
-            - InstanceType: c5.xlarge
+            - InstanceType: {{ instance }}
           MinCount: 1
           MaxCount: 2
       Networking:
