Support enforcing IMDSv2 in build image configuration

--- a/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
@@ -7,6 +7,8 @@ Image:
         Encrypted: True
 
 Build:
+    Imds:
+        RequireImdsV2: true
     Iam:
         InstanceRole: {{ instance_role }}
     InstanceType: {{ instance }}
