Change Imds>RequireImdsV2 into Imds>ImdsSupport
This patch changes Imds>RequireImdsV2 into Imds>ImdsSupport, a string
that can have values v1.0 and v2.0 and indicates the level of IMDS support
for the cluster nodes or ImageBuilder build and test instances, with the
understanding that v1.0 means that both IMDSv1 and IMDSv2 are supported,
while v2.0 means that only IMDSv2 is.

--- a/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
@@ -8,7 +8,7 @@ Image:
 
 Build:
     Imds:
-        RequireImdsV2: true
+        ImdsSupport: v2.0
     Iam:
         InstanceRole: {{ instance_role }}
     InstanceType: {{ instance }}
