--- a/tests/integration-tests/tests/createami/test_createami/test_kernel4_build_image_run_cluster/image.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_kernel4_build_image_run_cluster/image.config.yaml
@@ -1,5 +1,5 @@
 Build:
     Imds:
-        RequireImdsV2: false
+        ImdsSupport: v1.0
     InstanceType: {{ instance }}
     ParentImage: {{ parent_image }}
