--- a/cli/tests/pcluster/example_configs/awsbatch.full.yaml
+++ b/cli/tests/pcluster/example_configs/awsbatch.full.yaml
@@ -1,5 +1,5 @@
 Imds:
-  RequireImdsV2: true
+  ImdsSupport: v2.0
 Region: us-east-1
 Image:
   Os: alinux2  # alinux2 | centos7 | ubuntu1804 | ubuntu2004
